<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hackzurich.picturesharingapp.RegisterActivity">

    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txt_register_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_firstname"
                android:textColorLink="@color/colorPrimaryDark"
                android:textColor="@color/textColorSecondary"/>

            <EditText
                android:id="@+id/txt_register_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_lastname"
                android:textColorLink="@color/colorPrimaryDark"
                android:textColor="@color/textColorSecondary"/>

            <EditText
                android:id="@+id/txt_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_email"
                android:textColorLink="@color/colorPrimaryDark"
                android:textColor="@color/textColorSecondary"/>


            <EditText
                android:id="@+id/txt_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:textColor="@color/textColorSecondary"/>

            <LinearLayout
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <Button
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="32dp"
                    android:text="@string/login_create_account"
                    android:background="@drawable/round_corners_primary_button"
                    android:onClick="btnRegistr_OnClick"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
